fix: neoassist z-index, floating doesnt appear on mobile

--- a/tailwind.css
+++ b/tailwind.css
@@ -726,7 +726,7 @@
 .neoasssist-widget-frame--loaded {
     bottom: 6px !important;
     right: 239px !important;
-    z-index: 99 !important;
+    z-index: 40 !important;
 }
 
 
